# Graphics-programming

./: .gitignore  README.md  package-lock.json
1.triangle/: CMakeLists.txt  main.cpp
1.triangle/shaders/: fragment.glsl  vertex.glsl
10.stencilTesting/: CMakeLists.txt  main.cpp
10.stencilTesting/shaders/: cube.fs  cube.vs  outline.fs
11.blending/: CMakeLists.txt  main.cpp
11.blending/shaders/: blending.fs  blending.vs
12.framebuffers/: CMakeLists.txt  main.cpp
12.framebuffers/shaders/: default.fs  framebuffer.fs  framebuffer.vs
13.cubemap/: CMakeLists.txt  main.cpp
13.cubemap/shaders/: cubemaps.fs  cubemaps.vs  default.fs  default.vs
14.geometryShader/: CMakeLists.txt  main.cpp
14.geometryShader/shaders/: geo.fs  geo.gs  geo.vs
15.5.asteroids_instanced/: 10.3.asteroids.vs  CMakeLists.txt  main.cpp
15.instancing/: CMakeLists.txt  main.cpp
15.instancing/shaders/: instancing.fs  instancing.vs
17.blinPhong/: CMakeLists.txt  main.cpp
17.blinPhong/shaders/: blin_phong.fs  phong.fs  plane.vs
18.shadowMapping/: CMakeLists.txt  main.cpp
18.shadowMapping/shaders/: shadow_depth.fs  shadow_depth.vs  shadowmapping.fs  shadowmapping.vs
19. NormalMapping/: CMakeLists.txt  main.cpp
19. NormalMapping/shaders/: normalMapping.fs  normalMapping.vs
2.textures/: CMakeLists.txt  main.cpp
2.textures/shaders/: fragment.glsl  vertex.glsl
20.parallaxMapping/: CMakeLists.txt  main.cpp
20.parallaxMapping/shaders/: parallaxMapping.fs  parallaxMapping.vs
21.bloom/: CMakeLists.txt  main.cpp
21.bloom/shaders/: bloom.fs  bloom.vs  bloom_final.fs  blur.fs  blur.vs  light_box.fs
22.DeferredShading/: CMakeLists.txt  main.cpp
22.DeferredShading/shaders/: deferred_light_box.fs  deferred_shading.vs  g_buffer.fs
23.SSAO/: main.cpp
23.SSAO/shaders/: blur.fs  deferred_shading.fs  deferred_shading.vs  g_buffer.fs  g_buffer.vs  ssao.fs
24.pbr/: CMakeLists.txt  main.cpp
24.pbr/shaders/: pbr.vs
25.heightMaps/: CMakeLists.txt  main.cpp
25.heightMaps/shaders/: tessellation.fs  tessellation.vs
25.tessellation/: main.cpp
26.tessellation/: CMakeLists.txt  main.cpp
26.tessellation/shaders/: control.tcs  tessellation.fs  tessellation.vs
27.computeShaders/: CMakeLists.txt  main.cpp
27.computeShaders/shaders/: compute.glsl  fragment.glsl  vertex.glsl
3.5 3D/: CMakeLists.txt  main.cpp
3.5 3D/shaders/: fragment.glsl  vertex.glsl
3.transformations/: CMakeLists.txt  main.cpp
3.transformations/shaders/: fragment.glsl  vertex.glsl
3D/: main.cpp
3D/shaders/: vertex.glsl
4.camera/: CmakeLists.txt  main.cpp
4.camera/shaders/: fragment.glsl  vertex.glsl
5.lighting/: CMakeLists.txt  main.cpp
5.lighting/shaders/: color.fs  color.vs  light_cube.fs
6.materials/: CMakeLists.txt  main.cpp
6.materials/shaders/: cube.fs  cube.vs  light.vs
7.lightingmaps/: CMakeLists.txt  main.cpp
7.lightingmaps/shaders/: cube.fs
8.lightcasters/: CMakeLists.txt  main.cpp
8.lightcasters/shaders/: cube.vs  directional.fs  light.fs  point.fs  spotlight.fs
9.modelLoading/: CMakeLists.txt  main.cpp
9.modelLoading/shaders/: mesh.fs  mesh.vs
camera/: main.cpp
hexagon/dependencies/include/: triangle.h
hexagon/src/: main.cpp  triangle.cpp
hexagon/src/shaders/: vertex.glsl
include/: camera.h  ibuffer.h  indexBuffer.h  mesh.h  model.h  shader.h  texture.h  utils.h  vbuffer.h  vertexArray.h  vertexBuffer.h  vertexBufferLayout.h
include/assimp/: revision.h
lib/: camera.cpp  ibuffer.cpp  indexBuffer.cpp  mesh.cpp  model.cpp  shader.cpp  texture.cpp  utils.cpp  vbuffer.cpp  vertexArray.cpp  vertexBuffer.cpp  vertexBufferLayout.cpp
lib/cmake/assimp-6.0/: assimpTargets.cmake
lightcasters/: main.cpp
lightcasters/shaders/: point.fs  spotlight.fs
lighting/: CMakeLists.txt  main.cpp
lighting/shaders/: color.fs  color.vs  fragment.glsl  light_cube.fs  light_cube.vs  vertex.glsl
lightingmaps/: main.cpp
materials/: main.cpp
materials/shaders/: cube.fs  cube.vs
modelLoading/: CMakeLists.txt
practice_exercices/test/: CMakeLists.txt  main.cpp
practice_exercices/test/shaders/: cube.fs  cube.vs  light.fs  light.vs
resources/objects/: backpack.mtl
resources/objects/survival-guitar-backpack/source/Survival_BackPack_2/: Untitled.mtl
stencilTesting/shaders/: cube.fs
test/: CMakeLists.txt  main.cpp
test/shaders/: cube.fs  cube.vs  light.fs  light.vs
textures/: main.cpp
textures/shaders/: vertex.glsl
transformations/: CMakeLists.txt
triangle/: CMakeLists.txt  main.cpp
vulkan/0.triangle/: CMakeLists.txt
vulkan/0.triangle/shaders/: shader.frag  shader.vert  triangle.vert
vulkan/0.triangle/src/: engine.cpp  engine.hpp  main.cpp  main.cpp.b
